force-app/main/default/objects/Quotation__c/fields/Quality__c.field-meta.xml
<CustomField>
    <fullName>Quality__c</fullName>
    <inlineHelpText>It Shows the Raw Meterial Quality.</inlineHelpText>
    <label>Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>