force-app/main/default/objects/Quotation__c/fields/Quatation__c.field-meta.xml
<CustomField>
    <fullName>Quatation__c</fullName>
    <label>Quatation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Revised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>