force-app/main/default/objects/Quotation__c/fields/Vendor_Category__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Category__c</fullName>
    <label>Vendor Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Woodwork</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Cleaning &amp; Finishing</fullName>
            </value>
            <value>
                <fullName>Material Handling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>