force-app/main/default/objects/Quotation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Rejection_Reason__c</columns>
    <columns>Manager_Approval__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>