force-app/main/default/objects/Quotation__c/listViews/Owner_of_Quotations.listView-meta.xml
<ListView>
    <fullName>Owner_of_Quotations</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Category__c</columns>
    <columns>Item__c</columns>
    <columns>Quantity__c</columns>
    <columns>Price__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>Owner of Quotations</label>
</ListView>